[package]
name = "oniocdn"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = [ "multipart" ]}
config = { version = "0.14.0", features = ["toml"] }
dotenvy = "0.15.7"
nanoid = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = {version = "0.8.2", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["full"] }
